k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alexbrausen.com
spec:
  selector:
    matchLabels:
      app: alexbrausen_secure
  replicas: 2
  template:
    metadata:
      labels:
        app: alexbrausen_secure
    spec:
      containers:
      - name: alexbrausen-server
        image: brausen42/alexbrausen.com:v1.1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
