k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alexbrausen-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-alexbrausen"
spec:
  tls:
  - hosts:
    - alexbrausen.com
    - www.alexbrausen.com
    secretName: alexbrausen-tls
  rules:
  - host: alexbrausen.com
    http:
      paths:
      - backend:
          serviceName: alexbrausen
          servicePort: 80
  - host: www.alexbrausen.com
    http:
      paths:
      - backend:
          serviceName: alexbrausen
          servicePort: 80
